2020-07-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/html.R (tintHtml): More small updates from tufte
	* R/utils.R (pandoc2): One-line helper function 

2020-07-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/html.R (parse_footnotes): Updated from tufte upstream

2020-05-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/tintBibDemo.Rmd: Add simple demo based on
	non-quite-right bug report in issue #42
	* inst/examples/tintBibDemo.bib: One-entry bib file

2020-04-11  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add a 'last commit' badge

2019-10-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'See also' section

2019-04-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.2

	* R/pdf.R (tintPdfCreate): Revert remaining 'tidy' chunk option to
	FALSE to not have a spurious dependency on the formatR package

	* vignettes/tintHtmlIntro.Rmd: Refined download of two png images used
	for two margin figure to better cope with the delight that is Windows
	* vignettes/tintPdfIntro.Rmd: Idem, but also turn download off if on
	Windows and we could get this work for pdf vignettes on win-builder

2019-04-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* vignettes/tintHtmlIntro.Rmd (author): Updated to use package
	version of theme_tint and check for connectedness
	* vignettes/tintPdfIntro.Rmd: Idem

	* R/theme.R (theme_tint): Now conditional on ggplot2 installed

	* R/pdf.R: Added copyright header, small edits to roxygen docs
	* R/html.R: Idem

	* man/tintHtml.Rd: Updated
	* man/Custom-templates.Rd: Idem
	* man/YAML-metadata.Rd: Idem

	* R/utils.R: Marked sans_serif() via .Deprecated() as a candidate
	for removal.

2019-04-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Description): Expanded Description
